--- a/UsersLibrary/UsersLibrary.csproj
+++ b/UsersLibrary/UsersLibrary.csproj
@@ -63,6 +63,7 @@
   <ItemGroup>
     <Compile Include="Services\CryptedService.cs" />
     <Compile Include="Services\Service.cs" />
+    <Compile Include="Settings\WindowSettings.cs" />
     <Compile Include="Settings\SignUpSettings.cs" />
     <Compile Include="Users\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
