--- a/Services/App.config
+++ b/Services/App.config
@@ -2,6 +2,7 @@
 <configuration>
   <configSections>
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="ServicesLibrary.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
       <section name="Services.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -12,6 +13,20 @@
     <add key="ConfirmationMailPassword" value="f;j7Ne_2uy4ZVR!" />
   </appSettings>
   <userSettings>
+    <ServicesLibrary.Properties.Settings>
+      <setting name="Email" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Password" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Language" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="Theme" serializeAs="String">
+        <value />
+      </setting>
+    </ServicesLibrary.Properties.Settings>
     <Services.Properties.Settings>
       <setting name="Email" serializeAs="String">
         <value />
