--- a/PasswordManagerMainWindow/PasswordManagerApp.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerApp.csproj
@@ -58,6 +58,7 @@
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
