--- a/UsersLibrary/packages.config
+++ b/UsersLibrary/packages.config
@@ -4,4 +4,5 @@
   <package id="FluentEmail.Core" version="3.0.0" targetFramework="net472" />
   <package id="FluentEmail.Smtp" version="3.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.11" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
 </packages>
