--- a/PasswordManagerMainWindow/PasswordManagerApp.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerApp.csproj
@@ -202,7 +202,7 @@
     <Compile Include="MainWindow\Pages\AccountPage.xaml.cs">
       <DependentUpon>AccountPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="MainWindow\Pages\Animations.cs" />
+    <Compile Include="MainWindow\Pages\Animation.cs" />
     <Compile Include="MainWindow\Pages\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
     </Compile>
