Add settings display to settings page

--- a/Services/App.config
+++ b/Services/App.config
@@ -26,6 +26,9 @@
       <setting name="Theme" serializeAs="String">
         <value />
       </setting>
+      <setting name="IsTray" serializeAs="String">
+        <value>True</value>
+      </setting>
     </ServicesLibrary.Properties.Settings>
     <Services.Properties.Settings>
       <setting name="Email" serializeAs="String">
