Add passwordGenerateLength to settings

--- a/Services/App.config
+++ b/Services/App.config
@@ -29,6 +29,9 @@
       <setting name="IsTray" serializeAs="String">
         <value>True</value>
       </setting>
+      <setting name="PasswordGenerateLength" serializeAs="String">
+        <value>0</value>
+      </setting>
     </ServicesLibrary.Properties.Settings>
     <Services.Properties.Settings>
       <setting name="Email" serializeAs="String">
