Create frame of saving settings

--- a/Services/App.config
+++ b/Services/App.config
@@ -26,7 +26,7 @@
       <setting name="Theme" serializeAs="String">
         <value />
       </setting>
-      <setting name="IsTray" serializeAs="String">
+      <setting name="ToTray" serializeAs="String">
         <value>True</value>
       </setting>
       <setting name="PasswordGenerateLength" serializeAs="String">
