--- a/Services/Properties/Settings.settings
+++ b/Services/Properties/Settings.settings
@@ -14,7 +14,7 @@
     <Setting Name="Theme" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="IsTray" Type="System.Boolean" Scope="User">
+    <Setting Name="ToTray" Type="System.Boolean" Scope="User">
       <Value Profile="(Default)">True</Value>
     </Setting>
     <Setting Name="PasswordGenerateLength" Type="System.Int32" Scope="User">
