Add saving settings after every change

--- a/Services/App.config
+++ b/Services/App.config
@@ -21,10 +21,10 @@
         <value />
       </setting>
       <setting name="Language" serializeAs="String">
-        <value />
+        <value>0</value>
       </setting>
       <setting name="Theme" serializeAs="String">
-        <value />
+        <value>0</value>
       </setting>
       <setting name="ToTray" serializeAs="String">
         <value>True</value>
