Themes dictionaries fix

--- a/PasswordManagerMainWindow/PasswordManagerApp.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerApp.csproj
@@ -265,9 +265,7 @@
     <Resource Include="MainWindow\Assets\eye.png" />
     <Resource Include="MainWindow\Assets\eye_white.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="MainWindow\Models\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="mainicon.ico" />
   </ItemGroup>
