Reworked method GetLogo

--- a/PasswordManagerMainWindow/PasswordManagerApp.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerApp.csproj
@@ -38,7 +38,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>mainicon.ico</ApplicationIcon>
+    <ApplicationIcon>TrayIcon.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <NoWin32Manifest>true</NoWin32Manifest>
@@ -265,7 +265,9 @@
     <Resource Include="MainWindow\Assets\eye.png" />
     <Resource Include="MainWindow\Assets\eye_white.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="TrayIcon.ico" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="mainicon.ico" />
   </ItemGroup>
