Add main functionality to tray icon

--- a/PasswordManagerMainWindow/PasswordManagerApp.csproj
+++ b/PasswordManagerMainWindow/PasswordManagerApp.csproj
@@ -38,7 +38,8 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>TrayIcon.ico</ApplicationIcon>
+    <ApplicationIcon>
+    </ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup>
     <NoWin32Manifest>true</NoWin32Manifest>
@@ -264,9 +265,6 @@
     <Resource Include="MainWindow\Assets\closed_eye_white.png" />
     <Resource Include="MainWindow\Assets\eye.png" />
     <Resource Include="MainWindow\Assets\eye_white.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="TrayIcon.ico" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="mainicon.ico" />
